assets/style.css
/* ... */
@media only screen and (max-width: 1023px) {
    .maximise {
    width: 90%
    }
    .padder {
    width: 10%;
    }
    .jonathan .slide-carousel {
        height: 75%
    }
    .closer-journal {
        right: 7%;
    }
}

@media only screen and (max-width: 700px) {
    .col-xs-4.info {
    width: 100%;
    }
    .circle-left{
    right: 30vw !important;
    }
    .circle-right{
    left: 30vw !important;
    }

    .button.guide-left {
    top: 70vh;
    left: 10vw; 
    }
    .button.guide-right {
    top: 70vh;
    left: 70vw; 
    }

    .jonathan.portfolio .col-xs-6.right, .journal-entries .col-xs-11 {
    width: 96%;
    }
    .unmaximise {
    display: none
    }

    .maximise {
    width: 100%;
    display: block!important;
    margin-left: 5px;
    margin-right: 15px;
    }

    .jonathan .slide-carousel {
        height: 50%
    }
    .jonathan-journal .journal-list h4 {
        font-size: 14px;
    }

    .jonathan-journal .col-xs-4.info {
    width: 50%;
    }

    .jonathan-journal .padder {
    width: 2%;
    }
    .scroll-indicator {
        display:none;
    }
    .journal-list .number {
        width: 6% !important;
    }


.scroll-indicator2 {
	right:10px;

}
.scroll-indicator2:before {
	right:10px;

}
.indicator2 {
	top:0;
	left:-2px;
	position:absolute;
	width: 5px;
	height:50px;
	border-radius:5px;
    background: red;    
}
.indicator2 span {
    z-index: 100;
	position:absolute;
	padding-right:10px;
	transform:translate(-100%, 50%);
}
}

@media only screen and (max-width: 500px) {

  .left-runner {
    position: fixed;
    left: 45vw;
 }
  .right-runner {
    position: fixed;
    right: 15vw;
 }

.closer-journal {
    top: 7;
    right: 5%;
}

.right-runner h4, .left-runner h4 {
    padding-top: 2;
    font-size: 1.15em;
}
.scroll-indicator2, .jonathan-journal .padder {
    display: none;
}

.jonathan-journal .col-xs-6.left, .jonathan-journal .col-xs-4.info, .expander-journal {
    display: none;
}

.list { 
    width: 93%;
    position: absolute;
    height: 100vh;
    z-index: -1;
    margin: 0 0.7rem 0 0.7rem;
}

.journal-entries {
    border-top: 1px solid white;
    display: block;
    top: -1;
    margin-left: 5;
    width: 100%;
}

.full-height {
    position: absolute;
    left: 0;
    width: 20%;
    top: 0;
    height: 100%;
}

.jonathan-journal .journal-list h4{
    font-size: 15px;
}

.guide-leftportfolio h4 {
    font-size: 14px;
}

.jonathan h4 {
    font-size: 15.5px;
}

.button.guide-left {
    top: 70vh;
    left: 6vw; 
    }

}

